--- a/dev/sk-app-dev.yaml
+++ b/dev/sk-app-dev.yaml
@@ -15,7 +15,7 @@ trace:
 
 redis:
   host: localhost
-  password: 6379
+  password: 
   db: 3
   proxy2layer_queue_name: name
   ip_black_list_hash: 12
