--- a/dev/sk-app-dev.yaml
+++ b/dev/sk-app-dev.yaml
@@ -18,10 +18,10 @@ redis:
   password: 
   db: 3
   proxy2layer_queue_name: name
-  ip_black_list_hash: IpBLH
-  id_black_list_hash: IdBLH
-  ip_black_list_queue: IpBLQ
-  id_black_list_queue: IdBLQ
+  ip_black_list_hash: "IpBLH"
+  id_black_list_hash: "IdBLH"
+  ip_black_list_queue: "IpBLQ"
+  id_black_list_queue: "IdBLQ"
 
 service:
   ip_sec_access_limit: 1000
